// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plan Picker:  renders correctly 1`] = `
<Field
  component={[Function]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  name="planpicker"
  plans={
    Array [
      Object {
        "code": "1",
        "includesIp": true,
        "monthly": 100,
        "name": "One",
        "overage": 0.1,
        "volume": 1,
      },
      Object {
        "code": "2",
        "includesIp": false,
        "isFree": true,
        "monthly": 0,
        "name": "Two",
        "overage": 0.2,
        "volume": 2,
      },
      Object {
        "code": "3",
        "monthly": 300,
        "name": "Three",
        "overage": 0.3,
        "volume": 3,
      },
    ]
  }
/>
`;

exports[`Plan Picker:  renders correctly with an initial value 1`] = `
<Field
  component={[Function]}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Object {
        "code": "4",
        "monthly": 400,
        "name": "Four",
        "overage": 0.4,
        "volume": 4,
      },
    }
  }
  name="planpicker"
  plans={
    Array [
      Object {
        "code": "1",
        "includesIp": true,
        "monthly": 100,
        "name": "One",
        "overage": 0.1,
        "volume": 1,
      },
      Object {
        "code": "2",
        "includesIp": false,
        "isFree": true,
        "monthly": 0,
        "name": "Two",
        "overage": 0.2,
        "volume": 2,
      },
      Object {
        "code": "3",
        "monthly": 300,
        "name": "Three",
        "overage": 0.3,
        "volume": 3,
      },
    ]
  }
/>
`;
